added keypoint tracking

--- a/development_config.yml
+++ b/development_config.yml
@@ -1,5 +1,5 @@
 # Mode
-ENV: 'development'
+ENV: "development"
 TESTING: False
 
-CAMERA_DEVICE: 0  #0, 1, url: "rtsp:192...."
+CAMERA_DEVICE: 0 #0, 1, url: "rtsp:192...."
